--- a/package.json
+++ b/package.json
@@ -5,17 +5,55 @@
     "prepare": "husky install && gitmoji -i",
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.ts,.vue .",
+    "extract-i18n": "tsnd --transpile-only scripts/extractI18n.ts && prettier --write locales",
+    "check:types": "vue-tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "@quasar/extras": "^1.12.4",
+    "@vee-validate/zod": "^4.5.7",
+    "quasar": "^2.4.13",
+    "vee-validate": "^4.5.8",
+    "vue": "^3.2.25",
+    "vue-i18n": "^9.2.0-beta.29",
+    "vue-query": "^1.19.0",
+    "vue-router": "^4.0.12",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@cypress/vue": "^3.1.0",
+    "@quasar/vite-plugin": "^1.0.4",
+    "@testing-library/cypress": "^8.0.2",
+    "@types/node": "^17.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "chalk": "^4.1.2",
+    "cypress": "^9.3.1",
+    "eslint": "^8.7.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.3.0",
+    "fs-extra": "^10.0.0",
     "gitmoji-cli": "^4.7.0",
+    "happy-dom": "^2.30.1",
     "husky": "^7.0.4",
+    "lint-staged": "^12.3.2",
+    "object-path": "^0.11.8",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3",
+    "sass": "1.32.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vite-plugin-pages": "^0.20.0",
+    "vite-plugin-vue-layouts": "^0.5.0",
+    "vitest": "^0.2.3",
+    "vue-eslint-parser": "^8.2.0",
+    "vue-i18n-extract": "^2.0.4",
     "vue-tsc": "^0.29.8"
   }
 }
