--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview",
     "lint": "eslint --ext .js,.ts,.vue .",
     "extract-i18n": "tsnd --transpile-only scripts/extractI18n.ts && prettier --write locales",
-    "check:types": "vue-tsc --noEmit --skipLibCheck"
+    "check:types": "vue-tsc --noEmit --skipLibCheck",
+    "test:unit": "vitest"
   },
   "dependencies": {
     "@quasar/extras": "^1.12.4",
     "@vee-validate/zod": "^4.5.7",
+    "axios": "^0.25.0",
     "quasar": "^2.4.13",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.25",
@@ -23,13 +25,17 @@
   },
   "devDependencies": {
     "@cypress/vue": "^3.1.0",
+    "@intlify/vite-plugin-vue-i18n": "^3.2.1",
     "@quasar/vite-plugin": "^1.0.4",
     "@testing-library/cypress": "^8.0.2",
+    "@testing-library/vue": "^6.4.2",
+    "@types/faker": "^5.5.9",
     "@types/node": "^17.0.12",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "@vitejs/plugin-vue": "^2.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "@withshepherd/faker": "^5.5.5",
     "chalk": "^4.1.2",
     "cypress": "^9.3.1",
     "eslint": "^8.7.0",
@@ -39,9 +45,10 @@
     "eslint-plugin-vue": "^8.3.0",
     "fs-extra": "^10.0.0",
     "gitmoji-cli": "^4.7.0",
-    "happy-dom": "^2.30.1",
     "husky": "^7.0.4",
+    "jsdom": "^19.0.0",
     "lint-staged": "^12.3.2",
+    "msw": "^0.36.7",
     "object-path": "^0.11.8",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
