--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@quasar/extras": "^1.12.4",
     "@vee-validate/zod": "^4.5.7",
+    "@vueuse/core": "^7.5.5",
     "axios": "^0.25.0",
     "quasar": "^2.4.13",
     "vee-validate": "^4.5.8",
